// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Input.Search rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="g-space-compact g-space-compact-rtl g-input-search css-var-root g-input-search-rtl"
>
  <input
    class="g-input g-input-rtl g-input-outlined css-var-root g-input-css-var g-input-compact-item g-input-compact-first-item g-input-compact-item-rtl"
    type="search"
    value=""
  />
  <button
    class="g-btn css-var-root g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-icon-only g-btn-rtl g-btn-compact-item g-btn-compact-last-item g-btn-compact-item-rtl g-input-search-btn"
    type="button"
  >
    <span
      class="g-btn-icon"
    >
      <span
        aria-label="search"
        class="gicon gicon-search"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="search"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`Input.Search should support ReactNode suffix without error 1`] = `
<div
  class="g-space-compact g-input-search css-var-root"
>
  <span
    class="g-input-affix-wrapper g-input-outlined css-var-root g-input-css-var g-input-compact-item g-input-compact-first-item"
  >
    <input
      class="g-input"
      type="search"
      value=""
    />
    <span
      class="g-input-suffix"
    >
      <div>
        ok
      </div>
    </span>
  </span>
  <button
    class="g-btn css-var-root g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-icon-only g-btn-compact-item g-btn-compact-last-item g-input-search-btn"
    type="button"
  >
    <span
      class="g-btn-icon"
    >
      <span
        aria-label="search"
        class="gicon gicon-search"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="search"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`Input.Search should support addonAfter 1`] = `
<div
  class="g-space-compact g-input-search css-var-root"
>
  <input
    class="g-input g-input-outlined css-var-root g-input-css-var g-input-compact-item g-input-compact-first-item"
    type="search"
    value=""
  />
  <button
    class="g-btn css-var-root g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-icon-only g-btn-compact-item g-input-search-btn"
    type="button"
  >
    <span
      class="g-btn-icon"
    >
      <span
        aria-label="search"
        class="gicon gicon-search"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="search"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
          />
        </svg>
      </span>
    </span>
  </button>
  <span>
    Addon After
  </span>
</div>
`;

exports[`Input.Search should support addonAfter 2`] = `
<div
  class="g-space-compact g-input-search css-var-root g-input-search-with-button"
>
  <input
    class="g-input g-input-outlined css-var-root g-input-css-var g-input-compact-item g-input-compact-first-item"
    type="search"
    value=""
  />
  <button
    class="g-btn css-var-root g-btn-default g-btn-color-primary g-btn-varig-solid g-btn-compact-item g-input-search-btn"
    type="button"
  >
    <span
      class="g-btn-icon"
    >
      <span
        aria-label="search"
        class="gicon gicon-search"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="search"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
          />
        </svg>
      </span>
    </span>
  </button>
  <span>
    Addon After
  </span>
</div>
`;

exports[`Input.Search should support addonAfter and suffix for loading 1`] = `
<div
  class="g-space-compact g-input-search css-var-root"
>
  <span
    class="g-input-affix-wrapper g-input-outlined css-var-root g-input-css-var g-input-compact-item g-input-compact-first-item"
  >
    <input
      class="g-input"
      type="search"
      value=""
    />
    <span
      class="g-input-suffix"
    >
      suffix
    </span>
  </span>
  <button
    class="g-btn css-var-root g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-icon-only g-btn-loading g-btn-compact-item g-input-search-btn"
    type="button"
  >
    <span
      class="g-btn-icon g-btn-loading-icon"
    >
      <span
        aria-label="loading"
        class="gicon gicon-loading gicon-spin"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </span>
  </button>
  addonAfter
</div>
`;

exports[`Input.Search should support addonAfter and suffix for loading 2`] = `
<div
  class="g-space-compact g-input-search css-var-root g-input-search-with-button"
>
  <span
    class="g-input-affix-wrapper g-input-outlined css-var-root g-input-css-var g-input-compact-item g-input-compact-first-item"
  >
    <input
      class="g-input"
      type="search"
      value=""
    />
    <span
      class="g-input-suffix"
    >
      suffix
    </span>
  </span>
  <button
    class="g-btn css-var-root g-btn-default g-btn-color-primary g-btn-varig-solid g-btn-loading g-btn-compact-item g-input-search-btn"
    type="button"
  >
    <span
      class="g-btn-icon g-btn-loading-icon"
    >
      <span
        aria-label="loading"
        class="gicon gicon-loading gicon-spin"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </span>
  </button>
  addonAfter
</div>
`;

exports[`Input.Search should support custom Button 1`] = `
<div
  class="g-space-compact g-input-search css-var-root g-input-search-with-button"
>
  <input
    class="g-input g-input-outlined css-var-root g-input-css-var g-input-compact-item g-input-compact-first-item"
    type="search"
    value=""
  />
  <button
    class="g-btn css-var-root g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-compact-item g-btn-compact-last-item g-input-search-btn"
    type="button"
  >
    <span>
      ok
    </span>
  </button>
</div>
`;

exports[`Input.Search should support custom button 1`] = `
<div
  class="g-space-compact g-input-search css-var-root g-input-search-with-button"
>
  <input
    class="g-input g-input-outlined css-var-root g-input-css-var g-input-compact-item g-input-compact-first-item"
    type="search"
    value=""
  />
  <button
    type="button"
  >
    ok
  </button>
</div>
`;

exports[`Input.Search should support invalid addonAfter 1`] = `
<div
  class="g-space-compact g-input-search css-var-root g-input-search-with-button"
>
  <input
    class="g-input g-input-outlined css-var-root g-input-css-var g-input-compact-item g-input-compact-first-item"
    type="search"
    value=""
  />
  <button
    class="g-btn css-var-root g-btn-default g-btn-color-primary g-btn-varig-solid g-btn-compact-item g-btn-compact-last-item g-input-search-btn"
    type="button"
  >
    <span
      class="g-btn-icon"
    >
      <span
        aria-label="search"
        class="gicon gicon-search"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="search"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`Input.Search should support invalid suffix 1`] = `
<div
  class="g-space-compact g-input-search css-var-root"
>
  <span
    class="g-input-affix-wrapper g-input-outlined css-var-root g-input-css-var g-input-compact-item g-input-compact-first-item"
  >
    <input
      class="g-input"
      type="search"
      value=""
    />
    <span
      class="g-input-suffix"
    />
  </span>
  <button
    class="g-btn css-var-root g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-icon-only g-btn-compact-item g-btn-compact-last-item g-input-search-btn"
    type="button"
  >
    <span
      class="g-btn-icon"
    >
      <span
        aria-label="search"
        class="gicon gicon-search"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="search"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`Input.Search should support loading 1`] = `
<div
  class="g-space-compact g-input-search css-var-root"
>
  <input
    class="g-input g-input-outlined css-var-root g-input-css-var g-input-compact-item g-input-compact-first-item"
    type="search"
    value=""
  />
  <button
    class="g-btn css-var-root g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-icon-only g-btn-loading g-btn-compact-item g-btn-compact-last-item g-input-search-btn"
    type="button"
  >
    <span
      class="g-btn-icon g-btn-loading-icon"
    >
      <span
        aria-label="loading"
        class="gicon gicon-loading gicon-spin"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`Input.Search should support loading 2`] = `
<div
  class="g-space-compact g-input-search css-var-root g-input-search-with-button"
>
  <input
    class="g-input g-input-outlined css-var-root g-input-css-var g-input-compact-item g-input-compact-first-item"
    type="search"
    value=""
  />
  <button
    class="g-btn css-var-root g-btn-default g-btn-color-primary g-btn-varig-solid g-btn-loading g-btn-compact-item g-btn-compact-last-item g-input-search-btn"
    type="button"
  >
    <span
      class="g-btn-icon g-btn-loading-icon"
    >
      <span
        aria-label="loading"
        class="gicon gicon-loading gicon-spin"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;
